--- a/ranges/stylesheet.css
+++ b/ranges/stylesheet.css
@@ -10,16 +10,16 @@
     --light-orange: rgb(255, 210, 174);
     --dark-orange: rgb(158, 20, 2);
 
-    --dark-background: rgb(34, 34, 34);
+    --dark-background: rgb(20, 20, 20);
     --dm-light-purple: rgb(239, 187, 255);
     --dm-dark-purple: rgb(85, 20, 146);
     --dm-ultra-violet: rgb(37, 6, 94);
-    --dm-light-blue: rgb(181, 235, 245);
-    --dm-dark-blue: rgb(11, 67, 119);
-    --dm-light-green: rgb(201, 235, 195);
-    --dm-dark-green: rgb(1, 82, 51);
-    --dm-light-orange: rgb(255, 210, 174);
-    --dm-dark-orange: rgb(158, 20, 2);
+    --dm-light-blue: rgb(108, 201, 218);
+    --dm-dark-blue: rgb(46, 46, 46);
+    --dm-light-green: rgb(119, 245, 176);
+    --dm-dark-green: rgb(46, 46, 46);
+    --dm-light-orange: rgb(255, 174, 154);
+    --dm-dark-orange: rgb(46, 46, 46);
 }
 
 
@@ -305,6 +305,7 @@ h3{
     justify-content: center;
     margin: 1em;
     margin-bottom: .25em;
+    font-weight: 600;
 }
 
 /* .numbers{
@@ -442,7 +443,8 @@ footer{
     }
     
     #act1 .portion{
-        background-color: var(--dm-dark-blue);
+        background-color: var(--dm-light-blue);
+        color: var(--dark-background);
     }
     
     #act1 h2{
@@ -460,7 +462,8 @@ footer{
     }
     
     #act2 .portion{
-        background-color: var(--dm-dark-green);
+        background-color: var(--dm-light-green);
+        color: var(--dark-background);
     }
     
     #act2 h2{
@@ -477,7 +480,8 @@ footer{
     }
     
     #act3 .portion{
-        background-color: var(--dm-dark-orange);
+        background-color: var(--dm-light-orange);
+        color: var(--dark-background);
     }
     
     #act3 h2{
